// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link column snapshot test 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="LinkColumnDiv"
    key="0"
    onContextMenu={[Function]}
  >
    <Link
      draggingId={0}
      dropElement={[Function]}
      id={0}
      item={
        Object {
          "data": Array [
            Object {
              "id": 2,
              "label": "example.com",
              "link": "http://example.com",
              "type": "link",
            },
            Object {
              "id": 3,
              "label": "example2.com",
              "link": "http://example2.com",
              "type": "link",
            },
          ],
          "id": 0,
          "label": "folder",
          "type": "folder",
        }
      }
      openFolder={[MockFunction]}
      saveDraggingId={[Function]}
      setClicked={[Function]}
      setShiftClicked={[Function]}
    />
  </div>
  <div
    className="LinkColumnDiv"
    key="1"
    onContextMenu={[Function]}
  >
    <Link
      draggingId={0}
      dropElement={[Function]}
      id={1}
      item={
        Object {
          "id": 1,
          "label": "example.com",
          "link": "http://example.com",
          "type": "link",
        }
      }
      openFolder={[MockFunction]}
      saveDraggingId={[Function]}
      setClicked={[Function]}
      setShiftClicked={[Function]}
    />
  </div>
  <div
    className="LinkColumnDiv"
    key="4"
    onContextMenu={[Function]}
  >
    <Link
      draggingId={0}
      dropElement={[Function]}
      id={2}
      item={
        Object {
          "id": 4,
          "label": "example.com",
          "link": "http://example.com",
          "type": "link",
        }
      }
      openFolder={[MockFunction]}
      saveDraggingId={[Function]}
      setClicked={[Function]}
      setShiftClicked={[Function]}
    />
  </div>
  <div
    hidden={true}
    id="ContextMenu"
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
  >
    <span
      onClick={[Function]}
    >
      Edit
    </span>
    <span
      onClick={[Function]}
    >
      Delete
    </span>
    <span
      onClick={[Function]}
    >
      Close
    </span>
  </div>
</div>
`;

exports[`link column snapshot test 2`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="LinkColumnDiv"
    key="0"
    onContextMenu={[Function]}
  >
    <Link
      draggingId={0}
      dropElement={[Function]}
      id={0}
      item={
        Object {
          "data": Array [
            Object {
              "id": 2,
              "label": "example.com",
              "link": "http://example.com",
              "type": "link",
            },
            Object {
              "id": 3,
              "label": "example2.com",
              "link": "http://example2.com",
              "type": "link",
            },
          ],
          "id": 0,
          "label": "folder",
          "type": "folder",
        }
      }
      openFolder={[MockFunction]}
      saveDraggingId={[Function]}
      setClicked={[Function]}
      setShiftClicked={[Function]}
    />
  </div>
  <div
    className="LinkColumnDiv"
    key="1"
    onContextMenu={[Function]}
  >
    <Link
      draggingId={0}
      dropElement={[Function]}
      id={1}
      item={
        Object {
          "id": 1,
          "label": "example.com",
          "link": "http://example.com",
          "type": "link",
        }
      }
      openFolder={[MockFunction]}
      saveDraggingId={[Function]}
      setClicked={[Function]}
      setShiftClicked={[Function]}
    />
  </div>
  <div
    className="LinkColumnDiv"
    key="4"
    onContextMenu={[Function]}
  >
    <Link
      draggingId={0}
      dropElement={[Function]}
      id={2}
      item={
        Object {
          "id": 4,
          "label": "example.com",
          "link": "http://example.com",
          "type": "link",
        }
      }
      openFolder={[MockFunction]}
      saveDraggingId={[Function]}
      setClicked={[Function]}
      setShiftClicked={[Function]}
    />
  </div>
  <div
    hidden={false}
    id="ContextMenu"
    style={
      Object {
        "left": 20,
        "top": 0,
      }
    }
  >
    <span
      onClick={[Function]}
    >
      Edit
    </span>
    <span
      onClick={[Function]}
    >
      Delete
    </span>
    <span
      onClick={[Function]}
    >
      Open All
    </span>
    <span
      onClick={[Function]}
    >
      Close
    </span>
  </div>
</div>
`;
